--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
+    "filepond": "^4.32.7",
+    "filepond-plugin-image-preview": "^4.6.12",
     "gsap": "^3.12.7",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-filepond": "^7.1.3",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "tailwindcss": "^4.0.15",
