--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.15",
     "uuid": "^11.1.0"
   },
