--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.71.10",
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
+    "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
     "react-filepond": "^7.1.3",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.4.0",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.15",
