--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
+    "@welldone-software/why-did-you-render": "^10.0.1",
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.6.5",
