--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.2.0",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
     "@welldone-software/why-did-you-render": "^10.0.1",
+    "date-fns": "^4.1.0",
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.6.5",
