Implement search and infinite scroll for posts and profiles
- **Posts**:
  - Added search functionality to `PostsList.jsx` using `searchPosts`.
  - Integrated infinite scroll in `PostsList.jsx` with `infinitePosts`.
  - Updated `PostCard.jsx` for better post rendering.

- **Profiles**:
  - Added search functionality to `ProfilesList.jsx` using `searchProfiles`.
  - Integrated infinite scroll in `ProfilesList.jsx` with `infiniteProfiles`.

- **Context Updates**:
  - Updated `PostsContext.jsx` and `postsActions.js` to include `useSearchPostsQuery` and `useInfinitePostsQuery`.
  - Updated `ProfileContext.jsx` and `profileActions.js` to include `useSearchProfilesQuery` and `useInfiniteProfilesQuery`.

- **Backend and Database**:
  - Adjusted `backend functions.txt` and `database config.txt` to support new queries and configurations.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
+    "meilisearch": "^0.50.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
