--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
     "meilisearch": "^0.50.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-filepond": "^7.1.3",
     "react-hook-form": "^7.55.0",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.4.0",
