--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.4.0",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.15",
