--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.6.5",
+    "github-markdown-css": "^5.8.1",
     "gsap": "^3.12.7",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
@@ -39,6 +40,7 @@
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^10.1.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.4.0",
     "swiper": "^11.2.6",
