--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gsap": "^3.12.7",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
+    "lottie-react": "^2.4.1",
     "meilisearch": "^0.50.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
