--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
     "@welldone-software/why-did-you-render": "^10.0.1",
+    "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.6.5",
     "github-markdown-css": "^5.8.1",
     "gsap": "^3.12.7",
+    "i18n-iso-countries": "^7.14.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.1.0",
     "lottie-react": "^2.4.1",
