Prepare project for TypeScript migration
This commit captures the current stable state before starting the migration from
JSX/JS to TSX/TS. A new branch will be created from here to handle the migration
process, ensuring the main development branch remains stable and functional.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@fullcalendar/daygrid": "^6.1.17",
-    "@fullcalendar/interaction": "^6.1.17",
-    "@fullcalendar/react": "^6.1.17",
-    "@fullcalendar/timegrid": "^6.1.17",
+    "@fullcalendar/core": "^6.1.18",
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/interaction": "^6.1.18",
+    "@fullcalendar/list": "^6.1.18",
+    "@fullcalendar/react": "^6.1.18",
+    "@fullcalendar/timegrid": "^6.1.18",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.2.0",
     "@supabase/supabase-js": "^2.49.1",
