general design small changes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@fullcalendar/list": "^6.1.18",
     "@fullcalendar/react": "^6.1.18",
     "@fullcalendar/timegrid": "^6.1.18",
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.2.0",
     "@supabase/supabase-js": "^2.49.1",
@@ -29,6 +31,7 @@
     "@welldone-software/why-did-you-render": "^10.0.1",
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.6.5",
